--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches:
       - main
+      - dev
       - staging
   pull_request:
     branches:
       - main
+      - dev
       - staging
 jobs:
   build:
